<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whites">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/security"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dim_16dp"
        android:id="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_margin="@dimen/dim_16dp"
        app:cardCornerRadius="@dimen/dim_16dp"
        app:cardBackgroundColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_180dp"/>




    <TextView
        android:id="@+id/text_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:layout_margin="@dimen/dim_16dp"
        android:elevation="@dimen/dim_16dp"
        android:textSize="@dimen/dim_24sp"/>

    <TextView
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        android:id="@+id/text_sos_msg"
        android:textColor="@color/white"
        android:elevation="@dimen/dim_16dp"
        android:layout_margin="@dimen/dim_16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_sos"
        app:layout_constraintEnd_toStartOf="@id/sos_image"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:text="@string/message"/>

    <ImageView
        android:id="@+id/sos_image"
        android:layout_width="@dimen/dim_96dp"
        android:layout_height="@dimen/dim_96dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        android:elevation="@dimen/dim_16dp"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        android:layout_margin="@dimen/dim_16dp"/>


    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dim_16dp"
        android:id="@+id/green_card"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        android:layout_margin="@dimen/dim_16dp"
        app:cardCornerRadius="@dimen/dim_16dp"
        app:cardBackgroundColor="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_180dp"/>


    <TextView
        android:id="@+id/text_guard"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        android:layout_margin="@dimen/dim_16dp"
        android:textSize="@dimen/dim_24sp"/>

    <TextView
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintStart_toStartOf="@id/green_card"
        android:id="@+id/text_guard_msd"
        android:textColor="@color/white"
        android:elevation="@dimen/dim_16dp"
        android:layout_margin="@dimen/dim_16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_guard"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:text="@string/message_guard"
        app:layout_constraintEnd_toStartOf="@id/guard_image"/>

    <ImageView
        android:id="@+id/guard_image"
        android:layout_width="@dimen/dim_96dp"
        android:layout_height="@dimen/dim_96dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        android:elevation="@dimen/dim_16dp"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        android:layout_margin="@dimen/dim_16dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>